# AVRSPT-Converter

./: .gitmodules  CMakeLists.txt  README.md  main.cxx
common/: CMakeLists.txt  common_tools.cxx  common_tools.h  image_helpers.cxx  image_helpers.h  itkOrientedRASImage.cxx  mesh_helpers.cxx  mesh_helpers.h  test_common.cxx
components/: CMakeLists.txt  image_to_mesh.cxx  image_to_mesh.h  main.cxx
converters/: CMakeLists.txt  case_generator.cxx  decimate_quadric.cxx  image_to_vti.cxx  model_generator.cxx  model_processor.cxx  nii_to_vti.cxx  smooth_laplacian.cxx  smooth_mesh.cxx  smooth_taubin.cxx  volume_generator.cxx  vti_probe.cxx  vti_to_nii.cxx  vtk_to_vtp.cxx
scripts/: generate_model.sh  generate_seg.sh  labelization.sh  mesh_convert.sh  mesh_smoothing.sh  resample_vti.sh  seg_probe.py  smooth_experiment.sh  volume_test.sh  warp_segmentation.sh
